<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/lblItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="38dp"
        android:text="@string/name"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textSize="18sp"
        android:textColor="@android:color/background_light"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblItemDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="18dp"
        android:text="@string/selected_date"
        android:textColor="@android:color/background_light"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblItemName" />

    <TextView
        android:id="@+id/lblItemTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="17dp"
        android:text="@string/selected_time"
        android:textColor="@android:color/background_light"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblItemDate" />

    <TextView
        android:id="@+id/lblItemNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="15dp"
        android:text="@string/selected_notes"
        android:textColor="@android:color/background_light"
        android:textAppearance="@android:style/TextAppearance.Material"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblItemTime" />
</android.support.constraint.ConstraintLayout>