<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main">

    <Button
        android:id="@+id/button"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginBottom="36dp"
        android:layout_marginRight="28dp"
        android:backgroundTint="#80a0ff"
        android:onClick="onSearch"
        android:text="@string/find_a_doctor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginBottom="276dp"
        android:layout_marginRight="28dp"
        android:backgroundTint="#80a0ff"
        android:onClick="onAppt"
        android:text="@string/appointment"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="109dp"
        android:layout_height="40dp"
        android:layout_marginBottom="196dp"
        android:layout_marginRight="28dp"
        android:backgroundTint="#80a0ff"
        android:onClick="onInfo"
        android:text="@string/drugs"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>