<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">


    <TextView
        android:id="@+id/lblName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="45dp"
        android:text="@string/doc_name"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="35dp"
        android:text="@string/appt_date"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="42dp"
        android:text="@string/appt_time"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblDate" />

    <TextView
        android:id="@+id/lblNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="40dp"
        android:text="@string/notes"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.008" />

    <EditText
        android:id="@+id/txtNotes"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="243dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="95dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblNotes"
        app:layout_constraintTop_toBottomOf="@+id/txtTime" />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="187dp"
        android:layout_height="42dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/txtDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDate"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/format_date"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/txtTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lblDate"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        android:id="@+id/txtTime"
        android:layout_width="183dp"
        android:layout_height="47dp"
        android:layout_marginEnd="21dp"
        android:layout_marginStart="2dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/format_time"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toTopOf="@+id/txtNotes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/txtDate" />

</android.support.constraint.ConstraintLayout>